--- a/1103.css
+++ b/1103.css
@@ -13,3 +13,39 @@
     color:#000000;
     position:center;
 }
+.two{
+    display: inline-block; 
+    width:375;
+    height:667;
+    background: #FFFFFF;
+    text-align: center;
+    color:#000000;
+    position:center;
+}
+.three{
+    display: inline-block; 
+    width:375;
+    height:667;
+    background: #FFFFFF;
+    text-align: center;
+    color:#000000;
+    position:center;
+}
+.fore{
+    display: inline-block; 
+    width:375;
+    height:667;
+    background: #FFFFFF;
+    text-align: center;
+    color:#000000;
+    position:center;
+}
+.five{
+    display: inline-block; 
+    width:375;
+    height:667;
+    background: #FFFFFF;
+    text-align: center;
+    color:#000000;
+    position:center;
+}
