--- a/1103.css
+++ b/1103.css
@@ -5,7 +5,7 @@
 
 .one{
     display: inline-block; 
-    width:375px;
+    width:50%;
     height:667px;
     background: #FFFFFF;
     text-align: center;
@@ -14,7 +14,7 @@
 }
 .two{
     display: inline-block; 
-    width:375px;
+    width:50%;
     height:667px;
     background: #FFFFFF;
     text-align: center;
@@ -23,7 +23,7 @@
 }
 .three{
     display: inline-block; 
-    width:375px;
+    width:50%;
     height:667px;
     background: #FFFFFF;
     text-align: center;
@@ -32,7 +32,7 @@
 }
 .fore{
     display: inline-block; 
-    width:375px;
+    width:50%;
     height:667px;
     background: #FFFFFF;
     text-align: center;
@@ -41,7 +41,7 @@
 }
 .five{
     display: inline-block; 
-    width:375px;
+    width:50%;
     height:667px;
     background: #FFFFFF;
     text-align: center;
