--- a/1103.css
+++ b/1103.css
@@ -7,12 +7,12 @@
 
 .panel{
     display: inline-block; 
-    width:375;
+    width:375px;
     height:100%;
     background: #FFFFFF;
-    text-align: center;
-    font-size : 100 ;
     color:#000000;
-    line-height: 100%
+    text-align: center;
+    line-height: 100%;
+    font-size : 100px;
 }
 
